monospace fonts for dates and times to prevent row overflow

--- a/Server/Resources/styles.css
+++ b/Server/Resources/styles.css
@@ -1,3 +1,10 @@
+table tr td+td+td {
+  font-size: large;
+  font-family: monospace;
+  width: 8em;
+  white-space:nowrap;
+}
+
 th {background: #DBD7D5; padding-right: 10; padding-left: 10;}
 
 .header { position: fixed;}
